# IntelliOptics-SDK

./: .gitignore  LICENSE  README.md  _make_sdk_scaffold.py  create_detector.py  create_detector_rest.py  intellioptics_sdk_bootstrap.ps1  intellioptics_sdk_zip.ps1  make_io_sdk_zip.ps1  pyproject.toml  requirements.txt  templogs.txt  transfer chat.txt  verification-notes.md
.github/workflows/: api-deploy.yml  deploy-api.yml  deploy-storage-website.yml  python-sdk.yml
Azure/intellioptics-oneclick/: README.md
Azure/intellioptics-oneclick/backend/app/: schemas.py
Azure/intellioptics-oneclick/backend/app/clients/: intellioptics_client.py
Azure/intellioptics-oneclick/backend/app/queues/: servicebus.py
Azure/intellioptics-oneclick/backend/intellioptics/: experimental.py
Azure/intellioptics-oneclick/backend/intellioptics/intellioptics/: types.py
Azure/intellioptics-oneclick/deploy/: aci-worker.sh
IntelliOptics/: .gitignore  README.md
IntelliOptics/api/app/: main.py  requirements.txt
IntelliOptics/fourward/intellioptics/: client.py  models.py
IntelliOptics/sdk/: README.md  pyproject.toml
IntelliOptics/sdk/intellioptics.egg-info/: PKG-INFO
_inventory/: all_files.csv  all_files.txt  backend_scan.txt  backend_tree.txt  git_tracked.txt  git_untracked.txt  largest_50.txt  refs_fourward.txt  tree.txt
api/: requirements.txt
api-service/: startup.sh
api-service/Azure/: intellioptics_oneclick_bootstrap.sh
api-service/Azure/intellioptics-oneclick/: .gitignore  requirements.txt
api-service/Azure/intellioptics-oneclick/backend/: requirements.txt
api-service/Azure/intellioptics-oneclick/deploy/: install.sh
api-service/IntelliOptics/: README.md  pyproject.toml
api-service/IntelliOptics/tests/: test_client.py
api-service/IntelliOptics/tools/: build-site.ps1
api/app/: main.py  requirements.txt
backend/api/: .dockerignore  Dockerfile  requirements.txt
backend/api/app/: auth.py  config.py  db.py  logsetup.py  main.py.bak2  main.py.fixbak  migrations.py  models.py
backend/api/app/clients/: intellioptics_client.py.bak
backend/api/app/features/: alerts.py  detectors.py
backend/api/app/storage/: blob.py
backend/worker/: Dockerfile  db.py  models.py  requirements.txt
data/: app.db
docs/: CLIENT_OVERVIEW.md  SDK_STRUCTURE.md
docs/python-sdk/api-reference-docs/: genindex.html
docs/python-sdk/api-reference-docs/_sources/: index.rst.txt  models.rst.txt
fourward/intellioptics/: client.py  config.py  exceptions.py  models.py
infra/azure-oneclick/.github/workflows/: api-ci.yml
infra/azure-oneclick/deploy/: appservice-api.sh  common.sh  install.ps1  provision.sh
infra/azure-oneclick/worker-shim/: worker.py
intellioptics/: __init__.py  _http.py  _img.py  cli.py  client.py  errors.py  models.py
intellioptics-python-sdk/: .gitignore  README.md  pyproject.toml
intellioptics-python-sdk/.github/workflows/: ci.yml
intellioptics-python-sdk/src/intellioptics/: __init__.py  client.py  exceptions.py  models.py
intellioptics-python-sdk/tests/: test_client.py
intellioptics_sdk/: intellioptics_sdk_zip.ps1
python-sdk/: README.md  openapi-config.json  openapi-config.yaml  pyproject.toml
python-sdk/src/intellioptics/: __init__.py  _http.py  client.py  exceptions.py
sdk/: README.md  pyproject.toml
sdk/intellioptics/: __init__.py  client.py  exceptions.py  types.py
sdk/intellioptics.egg-info/: SOURCES.txt  top_level.txt
site/: 404.html  index.html
site/python-sdk/api-reference-docs/: index.html  models.html  search.html
spec/: openapi.json
tests/: test_cli.py  test_cli_whoami.py  test_client.py  test_client_init.py  test_img.py  test_models.py
tools/: _export_openapi_child.py  build-site.ps1  dump_openapi.py  dump_openapi_safe.py
typer/: __init__.py  testing.py
(+11 files in other folders)
