[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellioptics"
version = "0.1.0"
description = "IntelliOptics Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "IntelliOptics" }]
dependencies = [
  "requests>=2.31",
  "pydantic<3",
  "Pillow>=10",
  "typer>=0.12",
  "httpx>=0.27",
  "respx>=0.21",
  "responses>=0.25",
]

[project.scripts]
intellioptics = "intellioptics.cli:app"

[project.optional-dependencies]
test = [
  "pytest>=8",
  "responses>=0.25",
]

[tool.setuptools.packages.find]
include = ["intellioptics*"]
exclude = ["backend*", "infra*", "sdk*", "spec*"]
