[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellioptics"
version = "0.1.0"
description = "IntelliOptics Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "IntelliOptics" }]
dependencies = [
  "httpx>=0.27",
  "pydantic<3",
  "Pillow>=10",
  "typer>=0.12",
]

[project.scripts]
intellioptics = "intellioptics.cli:app"

[tool.setuptools.packages.find]
include = ["intellioptics*"]
exclude = ["backend*", "infra*", "sdk*", "spec*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
