[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "intellioptics"
version = "0.1.0"
description = "Official Python SDK for the IntelliOptics API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "4wardmotions", email = "dev@4wardmotions.com" }]
license = { text = "Proprietary" }
dependencies = [
  "httpx>=0.28.0",
  "pydantic>=2.7.0",
  "typing-extensions>=4.8.0"
]

[project.optional-dependencies]
test = ["pytest>=7.4", "respx>=0.21.1", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://4wardmotions.com"
