[project]
name = "intellioptics"
version = "0.1.0"
description = "IntelliOptics Python SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "typing-extensions>=4.12",
  "pillow>=10.4",
  "numpy>=2.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
intellioptics = ["py.typed"]
