[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intellioptics"
version = "0.1.0"
description = "IntelliOptics Python SDK (Groundlight-style API)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27.0"]
authors = [{ name = "4WardMotion Solutions" }]

[project.urls]
Homepage = "https://github.com/thamain1/IntelliOptics"

[tool.setuptools]
packages = ["intellioptics"]
